syntax = "proto3";

option go_package = "./;proto";
option java_package = "com.github.go2o.rpc";


// 广告位编号
message AdPositionId {
  int64 PositionId = 1;
}

message AdGroupResponse{
  repeated string Value = 1;
}

message SAdPosition{
  /** 编号 */
  int64 id = 1;
  /** 广告位编码 */
  string key = 2;
  /** 分组名称 */
  string groupName = 3;
  /** 广告位名称 */
  string name = 4;
  /** 投放的广告编号 */
  int64 putAid = 5;
  /** Opened */
  int32 opened = 6;
  /** Enabled */
  int32 enabled = 7;
  /** 标志 */
  int32 flag = 8;
}

// 查询广告请求
message QueryAdRequest{
  string keyword = 1;
  int32 size = 2;
}

// 查询广告响应
message QueryAdResponse{
  repeated SAdDto value = 1;
}

// 广告用户设置
message SAdUserSet {
  // 编号
  int64 id = 1;
  // 广告位编号
  int64 posId = 2;
  //广告用户编号
  int64 adUserId = 3;
  // 广告编号
  int64 adId = 4;
}

// 广告
message SAdDto {
  // 编号
  int64 id = 1;
  //广告用户编号
  int64 userId =  2;
  // 名称
  string name = 3;
  // 广告类型
  int32 adType = 4;
  // 展现次数
  int32 showTimes = 5;
  // 点击次数
  int32 clickTimes = 6;
  // 展现天数
  int32 showDays = 7;
  // 修改时间
  int64 updateTime = 8;
  // 广告数据
  SAdvertisementDto data = 9;
}

// 广告数据传输对象
message SAdvertisementDto {
  // 广告编号
  int64 id = 1;
  // 广告类型
  int32 adType = 2;
  // 文本广告数据
  STextAdData text = 3;
  // 图片广告数据
  SImageAdData image = 4;
  // 轮播广告数据
  SSwiperAdData swiper = 5;
}

// 文本广告数据
message STextAdData {
  int64 id = 1;
  string title = 2;
  string linkURL = 3;
}

// 图片广告数据
message SImageAdData {
  // 图片编号
  int64 id = 1;
  // 图片标题
  string title = 2;
  // 链接
  string linkUrl = 3;
  // 图片地址
  string imageUrl = 4;
  // 是否启用
  int32 enabled = 5;
  // 排列序号
  int32 sortNum = 6;
}

// 轮播广告数据
message SSwiperAdData{
  repeated SImageAdData images = 1;
}

message SetDefaultAdRequest {
  int64 positionId = 2;
  int64 adId = 3;
}
message SetUserAdRequest {
  int64 adUserId = 1;
  int64 posId = 2;
  int64 adId = 3;
}
message AdIdRequest {
  // 广告用户编号
  int64 adUserId = 1;
  // 广告编号
  int64 adId = 2;
  // 广告位KEY
  string adKey = 3;
  // 是否返回数据
  bool returnData = 4;
}

message SaveAdRequest {
  int64 adUserId = 1;
  SAdDto value = 2;
  SAdvertisementDto data = 3;
}

message SaveSwiperImageRequest {
  int64 adUserId = 1;
  int64 adId = 2;
  SImageAdData value = 3;
}

message ImageIdRequest {
  int64 adUserId = 1;
  int64 adId = 2;
  int64 imageId = 3;
}

// 查询广告数据
message QueryAdvertisementDataRequest{
  // 广告用户编号
  int64 adUserId = 1;
  //　广告位键
  repeated string keys = 2;
}

// 查询广告数据
message QueryAdvertisementDataResponse{
  // 广告用户编号
  int64 adUserId = 1;
  //　广告位键
  map<string,SAdvertisementDto> value = 2;
}

